# MangaJaNaiConverter-linux

./: .gitattributes  .gitignore  README.md  run.sh
backend/: pyproject.toml
backend/resources/: default_cli_configuration.json
backend/src/: .pre-commit-config.yaml  README.md  accelerator_detection.py  device_list.py  gpu.py  navi.py  progress_controller.py  pyproject.toml  pyrightconfig.json  run_upscale.py  system.py  test_accelerators.py  test_rocm.py
backend/src/api/: __init__.py  api.py  group.py  input.py  iter.py  lazy.py  node_check.py  node_context.py  node_data.py  output.py  settings.py  types.py
backend/src/mangajanaiconvertergui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/nodes/: condition.py  group.py  groups.py  node_cache.py
backend/src/nodes/impl/: blend.py  image_formats.py  image_op.py  image_utils.py  pil_utils.py  resize.py
backend/src/nodes/impl/color/: color.py  convert.py  convert_data.py  convert_model.py
backend/src/nodes/impl/onnx/: auto_split.py  load.py  model.py  np_tensor_utils.py  onnx_to_ncnn.py  session.py  tensorproto_utils.py  update_model_dims.py  utils.py
backend/src/nodes/impl/pytorch/: auto_split.py  convert_to_onnx_impl.py  utils.py
backend/src/nodes/impl/upscale/: auto_split.py  auto_split_tiles.py  basic_upscale.py  convenient_upscale.py  custom_scale.py  exact_split.py  grayscale.py  tile_blending.py  tiler.py
backend/src/nodes/properties/inputs/: __init__.py  __system_inputs.py  (+9 more)
backend/src/nodes/utils/: format.py  utils.py
backend/src/spandrel_custom/: __init__.py
(+37 files in other folders)
